<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#FFFFFF">

    <ScrollView
    	android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FAFAFA" >
            
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
        <include
            android:layout_width="0dip"
            layout="@layout/header" />
        
        <TextView
            android:id="@+id/default_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/launcher_text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <Button
                android:id="@+id/lang_option"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:background="@drawable/button_layout"
                android:text="@string/request_language"
                android:textColor="#F2F2F2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:orientation="vertical" >
            
            <TextView
            android:id="@+id/similar_interests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/similar_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#2ECCFA"
            android:textStyle="bold" />

            <EditText
                android:id="@+id/common_interests_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/common_interests_search_hint"
                android:maxLength="256"
                android:singleLine="true" >

            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:orientation="vertical" >
            
            <TextView
            android:id="@+id/start_chat"
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/start"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#2ECCFA"
            android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" >

                <Button
                    android:id="@+id/text_chat"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_weight="0.56"
                    android:background="@drawable/button_layout"
                    android:ellipsize="end"
                    android:text="@string/text_option"
                    android:textColor="#F2F2F2" />
                
                <Button
                    android:id="@+id/video_chat"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0.44"
                    android:background="@drawable/button_layout"
                    android:text="@string/video_option"
                    android:textColor="#F2F2F2" />
                
                <Button
                    android:id="@+id/spy_chat"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0.44"
                    android:background="@drawable/button_layout"
                    android:text="@string/spy_option"
                    android:textColor="#F2F2F2" />

            </LinearLayout>
            
        </LinearLayout>

	</LinearLayout>    
	
    </ScrollView>

</LinearLayout>
