<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#DEF" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:background="@drawable/discussion_layout" >
        
    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/question_mode_title"
        android:textColor="#FFFFFF"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    </LinearLayout>
	
    <ScrollView
    	android:id="@+id/scroll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/pretext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/question_pretext" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/ask_text"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/questionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:ems="10"
            android:hint="@string/enter_question_hint">

        </EditText>
        
        <ImageView
            android:id="@+id/given_pic"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:src="@drawable/ic_launcher" />

    </LinearLayout>
    
    </ScrollView>

</LinearLayout>